test/valid/func-stmt-expr-erisco.js
var f = function () { return 0; };
function g() { return 0; };
var z = [f, g];
z;
